fix bullet indicators on firefox

--- a/stylesheets/studentlists-package/viewstudentlists.css
+++ b/stylesheets/studentlists-package/viewstudentlists.css
@@ -28,13 +28,14 @@
 .bullet:hover {
     background: url('/images/list-item-green.png');
     background-repeat: no-repeat;
-    background-position-y: 7px;
+    background-position: 0 7px;
 }
 .bullet-active {
     background: url('/images/list-item-black.png');
     background-repeat: no-repeat;
-    background-position-y: 5px;
+    background-position: 0 7px;
 }
+
 #sidebar .simple-button {
     margin-left: 15px;
 }
